infrastructure/platforms/networking/external-dns/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: external-dns
  labels:
    name: external-dns
    app.kubernetes.io/name: external-dns
    app.kubernetes.io/component: dns-controller
